--- a/Dockerfiles/docker-compose.yml
+++ b/Dockerfiles/docker-compose.yml
@@ -2,45 +2,35 @@ version: '3.1'
 services:
   bot:
     build:
-      context: ../bot
+      context: .
       dockerfile: bot.Dockerfile
-    restart: always
     depends_on:
       - actions
       - db
     ports:
       - 5005:5005
     volumes:
-      - .:/bot
-    command:
-      - run
-      - --enable-api
-      - --cors
-      - "*"
-      - --credentials
-      - credentials.yml
-      - --debug
+      - ../bot:/app
 
-# rasa run --enable-api --cors "*" --credentials credentials.yml --debug
   actions:
     build:
-      context: ../bot
+      context: .
       dockerfile: actions.Dockerfile
-    restart: always
     ports:
       - 5055:5055
     volumes:
-      - ./actions:/actions
-
-  app:
+      - ../bot/actions:/app/actions
+      
+  sci:
     build:
-      context: ../sistema-de-controle-de-informacoes-ifrs
-      dockerfile: app.Dockerfile
-    restart: always
+      context: .
+      dockerfile: sci.Dockerfile
+    depends_on:
+      - db
     ports:
       - 8000:8000
     volumes:
-      - .:/app
+      - ../sistema-de-controle-de-informacoes-ifrs:/sci
 
   db:
     image: postgres
@@ -48,7 +38,10 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123456
-
+      POSTGRES_DB: ifrs
+    ports:
+      - 5432:5432
+    
   adminer:
     image: adminer
     restart: always
@@ -56,24 +49,3 @@ services:
       - db
     ports:
       - 8080:8080
-
-  # to tracker history of conversation
-  # mongo:
-  #   image: mongo
-  #   container_name: db
-  #   ports:
-  #     - 27017:27017
-  #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: root
-  #     MONGO_INITDB_ROOT_PASSWORD: example
-  #     MONGO_INITDB_DATABASE: rasa
-  # mongo-express:
-  #   image: mongo-express
-  #   depends_on:
-  #     - mongo
-  #   ports:
-  #     - 8081:8081
-  #   environment:
-  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
-  #     ME_CONFIG_MONGODB_ADMINPASSWORD: example
-  #     ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
