--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,64 +4,72 @@ services:
     build:
       context: .
       dockerfile: ./bot/bot.Dockerfile
+    networks:
+      - rasa-network
+    container_name: bot
     user: root
     depends_on:
       - actions
       - db
       - sci
+    expose:
+      - 5005
     ports:
       - 5005:5005
     volumes:
       - ./bot:/app
-    networks: 
-      - rasa-network
 
   actions:
     build:
       context: .
       dockerfile: ./bot/actions.Dockerfile
-    ports:
-      - 5055:443
-    networks: 
+    container_name: actions
+    networks:
       - rasa-network
-      
+    expose:
+      - 5055
+    ports:
+      - 5055:5055
+
   sci:
     build:
       context: .
       dockerfile: ./sistema-de-controle-de-informacoes-ifrs/sci.Dockerfile
+    networks:
+      - rasa-network
+    container_name: sci
+    user: root
     depends_on:
       - db
     ports:
       - 8000:8000
-    volumes:
-      - ./sistema-de-controle-de-informacoes-ifrs:/sci
-    networks: 
-      - rasa-network
 
   db:
     image: postgres
+    networks:
+      - rasa-network
     restart: always
+    container_name: db
     expose:
       - 5432
     ports:
       - 5432:5432
-    networks: 
-      - rasa-network
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123456
       POSTGRES_DB: ifrs
-    
+
   adminer:
     image: adminer
+    container_name: adminer
+    networks:
+      - rasa-network
     restart: always
     depends_on:
       - db
     ports:
       - 8080:8080
-    networks: 
-      - rasa-network
 
-networks: 
+networks:
   rasa-network:
-      driver: bridge
+    driver: bridge
