--- a/bot/config.yml
+++ b/bot/config.yml
@@ -18,20 +18,15 @@ pipeline:
     "intent_split_symbol": "_"
     "token_pattern": None
   - name: SpacyFeaturizer
-  - name: RegexFeaturizer
   - name: CountVectorsFeaturizer
   - name: CountVectorsFeaturizer
     analyzer: char_wb
     min_ngram: 1
     max_ngram: 4
   - name: LexicalSyntacticFeaturizer
-  - name: ResponseSelector
-    epochs: 100
-    constrain_similarities: true
   - name: DIETClassifier
     epochs: 100
     constrain_similarities: True
-  - name: EntitySynonymMapper
   - name: FallbackClassifier
     threshold: 0.5
     ambiguity_threshold: 0.1
@@ -42,12 +37,21 @@ policies:
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
-  - name: MemoizationPolicy
-  - name: RulePolicy
-  - name: UnexpecTEDIntentPolicy
-    max_history: 5
-    epochs: 100
-  - name: TEDPolicy
-    max_history: 5
-    epochs: 100
-    constrain_similarities: true
+#   - name: MemoizationPolicy
+#   - name: RulePolicy
+#   - name: UnexpecTEDIntentPolicy
+#     max_history: 5
+#     epochs: 100
+#   - name: TEDPolicy
+#     max_history: 5
+#     epochs: 100
+#     constrain_similarities: true
+  # - name: MemoizationPolicy
+  # - name: RulePolicy
+  # - name: UnexpecTEDIntentPolicy
+  #   max_history: 5
+  #   epochs: 100
+  # - name: TEDPolicy
+  #   max_history: 5
+  #   epochs: 100
+  #   constrain_similarities: true
